<resources>
    <string name="app_name">CommandMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="commands">Commands</string>
    <string name="my_workouts">Workouts</string>
    <string name="close">Close</string>
    <string name="stats">Stats</string>
    <string name="add_workout">Add Workout</string>
    <string name="your_presets">Your presets</string>
    <string name="workout_information">Workout Information</string>
    <string name="workout_name">Workout Name</string>
    <string name="preparation_length">Preparation Length</string>
    <string name="round_length">Round Length</string>
    <string name="intensity">Intensity</string>
    <string name="rest_between_rounds">Rest Between Rounds</string>
    <string name="rounds">Rounds</string>
    <string name="complete">Complete</string>
    <string name="save">Save</string>
    <string name="add_command">Add Command</string>
    <string name="new_command">New command</string>
    <string name="edit">Edit</string>
    <string name="rounds_and_time">%1$s rounds - %2$s</string>
    <string name="round_copied">Round %1$s copied</string>
    <string name="round_number">Round %1$s</string>
    <string name="name_and_save">Name and save</string>
    <string name="command_name">Command name</string>
    <string name="delete">Delete</string>
    <string name="workout">Workout</string>
    <string name="create_workout">Create Workout</string>
    <string name="summary">Summary</string>
    <string name="weighting">Weighting</string>
    <string name="add_commands">Add commands</string>
    <string name="name">Name</string>
    <string name="add_commands_to_workout">Add commands to workout</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="frequency">Frequency</string>

    <string-array name="frequency_spinner_array">
        <item>Very Often</item>
        <item>Often</item>
        <item>Average</item>
        <item>Rare</item>
        <item>Very Rare</item>
    </string-array>

    <string name="very_often">Very Often</string>
    <string name="often">Often</string>
    <string name="average">Average</string>
    <string name="rare">Rare</string>
    <string name="very_rare">Very Rare</string>
    <string name="round">Round</string>
    <string name="of">of</string>
    <string name="time_to_complete">Time to complete</string>
    <string name="remaining">remaining</string>
    <string name="elapsed">Elapsed</string>
    <string name="restart">Restart</string>
    <string name="commands_completed">Commands completed</string>
    <string name="deleted_snackbar">%1$s has been deleted</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_this_workout">Cancel changes?</string>
    <string name="unsaved_dialog_message">Any changes you have made to this workout are unsaved and will be lost.</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="yes_cancel">Yes, cancel</string>
    <string name="this_is_a_required_field">This is a required field.</string>
    <string name="add_commands_dialog_message">You need to check at least one command to progress. You can also create new commands by clicking the "Add Command" button below.</string>
    <string name="greater_than_zero">Must be greater than zero.</string>
    <string name="add_a_workout_and_it_will_show_up_here">Add a workout and it will show up here.</string>
    <string name="add_a_command_and_it_will_show_up_here">Add a command and it will show up here.</string>
    <string name="create_a_workout">Create a Workout!</string>
    <string name="record_a_command">Record a command!</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_command_dialog_message">Please add commands to begin this workout.</string>
    <string name="empty_rounds_dialog_message">Some of your rounds do not contain commands. Please add at least one command to each round to save this workout.</string>
    <string name="empty_rounds_on_begin_workout_dialog_message">Some of your rounds do not contain commands. Please add at least one command to each round to begin this workout.</string>
    <string name="ok">Ok</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="edit_this_workout">Edit this workout?</string>
    <string name="edit_workout_dialog_message">This will stop and exit the current workout.</string>
    <string name="edit_workout">Edit workout</string>
    <string name="recording_enabled">Recording enabled.</string>
    <string name="recording_denied">Recording and saving audio permissions have been denied. These both must be granted to record audio.</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_required">Upgrade Required</string>
    <string name="your_workout_your_way">Your workout, your way</string>
    <string name="boxing">Boxing</string>
    <string name="hiit">HIIT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_error">There was an problem creating your account, please try again later.</string>
    <string name="weak_password_error">You have entered a weak password. Please choose one that is more secure.</string>
    <string name="email_collision_error">An account with this email address already exists.</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_details_to_get_started">Enter your details to get started</string>
    <string name="password_validation_error">Your password must have at least 7 characters.</string>
    <string name="email_validation_error">Please enter a valid email address.</string>
    <string name="log_out">Log Out</string>
    <string name="invalid_user_exception">An account with this email address does not exist.</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="custom">custom</string>
    <string name="packs">Packs</string>
    <string name="login">Login</string>
    <string name="recording_too_short">Recording too short. Hold the microphone to record a command.</string>
    <string name="next">Next</string>
    <string name="random">Random</string>
    <string name="structured">Structured</string>
    <string name="tab_two_instructions">Check the commands you would like to include</string>
    <string name="tab_three_structured_instructions">Customise your rounds</string>
    <string name="tab_three_random_instructions">Edit the frequency your commands are played</string>
    <string name="no">No</string>
    <string name="this_round_does_not_contain_any_commands">This round does not contain any commands</string>
    <string name="press_and_hold_to_reorder_commands">Press and hold to reorder commands</string>
    <string name="apply">Apply</string>
    <string name="confirm">Comfirm</string>
    <string name="time_allocated">Time allocated</string>
    <string name="check_the_rounds_you_would_like_to_paste">Check the rounds you would like to paste</string>
    <string name="select_all">Select All</string>
    <string name="paste">Paste</string>
    <string name="total">Total Length:</string>
    <string name="rest">Rest:</string>
    <string name="between_rounds">Between Rounds:</string>
    <string name="command">Command</string>
    <string name="invalid_credentials_exception">Invalid credentials</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name</string>
    <string name="sign_up">Sign Up</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="packs_description">Our packs marketplace is coming soon. Interested in listing your own workouts for sale? Click below to get in touch via our website.</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="create_your_command">Create Your Command</string>
    <string name="command_audio">Command audio</string>
    <string name="zero_seconds">00:00</string>
    <string name="create_a_command">Create a Command</string>
    <string name="record_command_audio">Record command audio</string>
    <string name="go_to_settings_to_enable_permissions">Go to settings to enable audio recording.</string>
    <string name="permissions_dialog_message">Please allow both audio recording and media access permissions to create commands. CommandMe requires this to be able to record your voice and store the audio file on your device.</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="default_time_allocated">Default Time Allocated</string>
    <string name="empty_rounds">Empty rounds</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="previous">Prev</string>
    <string name="copy">Copy</string>
    <string name="search">Search</string>
    <string name="google_sign_in_error">There was an error signing in with your google account, please check your internet connection and try again</string>
    <string name="preview_upgrade">Preview upgrade</string>
    <string name="premium_upgrade">Premium upgrade</string>
    <string name="premium">(Premium)</string>
    <string name="exit">Exit</string>
    <string name="audio_length_info_message">Be aware that if the allocated time is less than the audio length, the audio may be cut off during your workout.</string>
</resources>
