<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_boxer_24dp"
            android:id="@+id/myWorkoutsScreen"
            android:title="@string/my_workouts" />
        <item
            android:icon="@drawable/ic_record_voice"
            android:id="@+id/commandsScreen"
            android:title="@string/commands" />
        <item
            android:icon="@drawable/ic_packs"
            android:id="@+id/packsScreen"
            android:title="@string/packs" />
<!--        <item-->
<!--            android:icon="@drawable/ic_baseline_arrow_circle_up_24"-->
<!--            android:id="@+id/premium"-->
<!--            android:title="@string/premium_upgrade" />-->
    </group>

</menu>
