<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/very_often_tv"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/very_often"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/frequency_selection_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/often_tv"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/often"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/frequency_selection_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_tv"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/average"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/frequency_selection_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rare_tv"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/rare"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/frequency_selection_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/very_rare_tv"
        android:layout_width="160dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/very_rare"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/frequency_selection_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>