<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_faded_20"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_information"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workout_name_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/workout_name"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workout_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/preparation_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_info_outline_24dp"
        android:drawablePadding="10dp"
        android:text="@string/preparation"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/preparation_counter"
        app:layout_constraintStart_toStartOf="@+id/preparation_counter"
        app:layout_constraintTop_toBottomOf="@+id/workout_name_TIL" />


    <com.middleton.scott.customboxingworkout.utils.customviews.CounterView
        android:id="@+id/preparation_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparation_TV" />

    <TextView
        android:id="@+id/rounds_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_info_outline_24dp"
        android:drawablePadding="10dp"
        android:text="@string/rounds"
        app:layout_constraintEnd_toEndOf="@+id/number_of_rounds_counter"
        app:layout_constraintStart_toStartOf="@+id/number_of_rounds_counter"
        app:layout_constraintTop_toBottomOf="@+id/preparation_counter" />

    <com.middleton.scott.customboxingworkout.utils.customviews.CounterView
        android:id="@+id/number_of_rounds_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounds_TV" />

    <TextView
        android:id="@+id/round_length_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_info_outline_24dp"
        android:drawablePadding="10dp"
        android:text="@string/round_length"
        app:layout_constraintEnd_toEndOf="@+id/round_duration_counter"
        app:layout_constraintStart_toStartOf="@+id/round_duration_counter"
        app:layout_constraintTop_toBottomOf="@+id/number_of_rounds_counter" />

    <com.middleton.scott.customboxingworkout.utils.customviews.CounterView
        android:id="@+id/round_duration_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_length_TV" />

    <TextView
        android:id="@+id/rest_length_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_info_outline_24dp"
        android:drawablePadding="10dp"
        android:text="@string/rest_length"
        app:layout_constraintEnd_toEndOf="@+id/rest_duration_counter"
        app:layout_constraintStart_toStartOf="@+id/rest_duration_counter"
        app:layout_constraintTop_toBottomOf="@+id/round_duration_counter" />

    <com.middleton.scott.customboxingworkout.utils.customviews.CounterView
        android:id="@+id/rest_duration_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_length_TV" />

    <TextView
        android:id="@+id/intensity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_info_outline_24dp"
        android:drawablePadding="10dp"
        android:text="@string/intensity"
        app:layout_constraintEnd_toEndOf="@+id/intensity_seekBar"
        app:layout_constraintStart_toStartOf="@+id/intensity_seekBar"
        app:layout_constraintTop_toBottomOf="@+id/rest_duration_counter" />

    <SeekBar
        android:id="@+id/intensity_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensity_tv" />

    <Button
        android:id="@+id/complete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensity_seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>